テストが通るように変更
